<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.mmanoghna.simplifiedlearning.add">

        <TextView
            android:textColor="#000000"

            android:id="@+id/labelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/textName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp" />

        <TextView
            android:textColor="#000000"

            android:id="@+id/labelname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name1"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/lastname1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:textSize="24dp" />

        <TextView
            android:textColor="#000000"

            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_dob"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/dobedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:textSize="24dp" />

        <TextView
            android:textColor="#000000"

            android:id="@+id/addresstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_address"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/addressedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:textSize="24dp" />

        <TextView
            android:id="@+id/Phototext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/label_photo"
            android:textColor="#000000"

            android:textSize="24dp" />

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff"
            android:background="#1A237E"
            android:textColorHighlight="#E8EAF6"
            android:text=" Upload Photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <TextView
            android:id="@+id/adhartext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/label_aadhar"
            android:textColor="#000000"

            android:textSize="24dp" />

        <EditText
            android:id="@+id/adharedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/uploadadhar"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:textColor="#ffffff"
                android:textColorHighlight="#E8EAF6"
                android:background="#1A237E"
                android:text=" Upload" />

            <Button
                android:id="@+id/verifyadhar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#ffffff"
                android:background="#1A237E"
                android:textColorHighlight="#E8EAF6"
                android:text="verify" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/viewImage1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/pantext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"

            android:text="@string/pan_number"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/panedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/uploadpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:textColor="#ffffff"
                android:textColorHighlight="#E8EAF6"
                android:background="#1A237E"
                android:text=" Upload" />

            <Button
                android:id="@+id/verifypan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColorHighlight="#E8EAF6"
                android:textColor="#ffffff"
                android:background="#1A237E"
                android:text="verify" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/viewImage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/banktext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/bank_statement"
            android:textColor="#000000"

            android:textSize="24dp" />

        <EditText
            android:id="@+id/bankedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:textColorHighlight="#E8EAF6"
                android:id="@+id/uploadbankstat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:textColor="#ffffff"
                android:background="#1A237E"
                android:text=" Upload" />

            <Button
                android:textColorHighlight="#E8EAF6"
                android:id="@+id/verifystat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:textColor="#ffffff"
                android:background="#1A237E"
                android:text="verify" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/viewImage3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:onClick="Newapp"
            android:text="SAVE"
            android:textColorHighlight="#3F51B5"
            android:textSize="24dp" />


    </LinearLayout>
</ScrollView>
